force-app/main/default/objects/cdm_Account_Relationship__c/cdm_Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>