force-app/main/default/objects/cdm_Account_Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships(Backward)</relationshipLabel>
    <relationshipName>Account_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>