force-app/main/default/objects/cdm_Account_Relationship__c/fields/Related_Account_AccountType__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_AccountType__c</fullName>
    <formula>Related_Account__r.CDM_Account_Type__c</formula>
    <label>Related Account - Account Type</label>
    <type>Text</type>
</CustomField>