force-app/main/default/objects/cdm_Account_Relationship__c/fields/Relationship_Code__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Code__c</fullName>
    <label>Relationship Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>