force-app/main/default/objects/cdm_Account_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>